- Add ability to import encrypted disks.
- Add ability to import software raid disks. (except vinum)
- Add ability to import single disks. (detect ZFS/UFS/NTFS only)
- Update mount points after importing disks. (GPT UFS/MBR UFS/GPT NTFS only)
- Add ZFS sparse volume support.
- Add GPT UUID to mount point.
- Add a warning for changing of the disk in config.
- Wait response of LAN interface if static with gateway.
- Run umount before iSCSI initiator shutdown.
- Remount all after netif is up for iSCSI device.
- Clear notify after execute now of rsync client/local.
- Increase the number of config backup to 6.
- Confirm permission on temporary directory.
- Remove existing cache and notify at boot.
- Change default AIO size to 4096.
- Change kern.maxfilesperproc to 50000.
- Change default atime of ZFS dataset is on.
- Update SSL certificate and privatekey.
- Add iscsi default values to default config.
- Remove unused hw.ata.to from sysctl.
- Remove AIO disable at boot.
- Add 60days lifetime on ZFS auto snapshot.
- Add ata chipset patch. (VT6420/VT6421)
- Add amdtemp patch.
- Use SCSI inquiry for model and serial.
- Upgrade istgt to 20120901.
- Upgrade isboot to 0.2.6.
- Upgrade zoneinfo to 2012f.
- Upgrade transmission to 2.71.
- Upgrade e2fsprogs to 1.42.6.
- Upgrade php to 5.4.7.
- Upgrade to FreeBSD 9.1-RC2.

Bug fixes:

- Set default timezone.
- Fix broken modifications.
- Fix wrong mount check.
- Remove extra space.
- Fix istgt reload operation is failed.
- Remount zfs dataset after modifying canmount.
- Remove unused empty hosts.
- Add LF to motd.
- Fix missing desc and atime field of ZFS settings.
- Load geom before import disks.
- Remove lock before execute now of rsync client/local.
- Fix using same ifield on file chooser.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.